--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.form-enter {
+  opacity: 0;
+  transform: translateX(100%);
+}
+.form-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition:
+    opacity 600ms,
+    transform 600ms;
+}
+.form-exit {
+  opacity: 1;
+  transform: translateX(0);
+}
+.form-exit-active {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition:
+    opacity 600ms,
+    transform 600ms;
+}
+
+.transition-container {
+  position: relative;
+}
+.transition-item {
+  position: absolute;
+  width: 100%;
+}
